unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/ETT_Tyre_Rejection_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Tyre Rejection Line Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Tyre Rejection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tyre Rejection Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>