unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Bead_bundle_crack__c.field-meta.xml
<CustomField>
    <fullName>Bead_bundle_crack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bead bundle crack</label>
    <type>Checkbox</type>
</CustomField>