unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Bead_wire_loosening__c.field-meta.xml
<CustomField>
    <fullName>Bead_wire_loosening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bead wire loosening</label>
    <type>Checkbox</type>
</CustomField>