unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>ETT_Inspection_Card__r.ETT_Brand__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand</label>
    <type>Text</type>
</CustomField>