unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Buttress_Crack_Shoulder_Crack__c.field-meta.xml
<CustomField>
    <fullName>Buttress_Crack_Shoulder_Crack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buttress Crack/ Shoulder Crack</label>
    <type>Checkbox</type>
</CustomField>