unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>ETT_Inspection_Card__r.ETT_Country__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>