unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Cut__c.field-meta.xml
<CustomField>
    <fullName>Cut__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cut</label>
    <length>255</length>
    <type>Text</type>
</CustomField>