unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/ETT_Good_Condition__c.field-meta.xml
<CustomField>
    <fullName>ETT_Good_Condition__c</fullName>
    <label>Good Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>