unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/ETT_Job_Card__c.field-meta.xml
<CustomField>
    <fullName>ETT_Job_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Card</label>
    <referenceTo>ETT_Job_Card__c</referenceTo>
    <relationshipLabel>Tyre Rejection Line Items</relationshipLabel>
    <relationshipName>Tyre_Rejection_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>