unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/ETT_Job_Stage__c.field-meta.xml
<CustomField>
    <fullName>ETT_Job_Stage__c</fullName>
    <label>Job Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETT_Job_Stages</valueSetName>
    </valueSet>
</CustomField>