unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/ETT_Number_of_cuts_0_10_mm__c.field-meta.xml
<CustomField>
    <fullName>ETT_Number_of_cuts_0_10_mm__c</fullName>
    <label>Number of cuts(0-10 mm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>