unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/ETT_Number_of_cuts_26_to_38_mm__c.field-meta.xml
<CustomField>
    <fullName>ETT_Number_of_cuts_26_to_38_mm__c</fullName>
    <label>Number of cuts(26 to 38 mm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>