unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/ETT_Number_of_cuts_51_mm_and_above__c.field-meta.xml
<CustomField>
    <fullName>ETT_Number_of_cuts_51_mm_and_above__c</fullName>
    <label>Number of cuts(51 mm and above)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>