unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/ETT_Version__c.field-meta.xml
<CustomField>
    <fullName>ETT_Version__c</fullName>
    <label>Job Card Stage Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>