unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Excessive_One_sided_Wear__c.field-meta.xml
<CustomField>
    <fullName>Excessive_One_sided_Wear__c</fullName>
    <label>Excessive One sided Wear</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>