unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Extended__c.field-meta.xml
<CustomField>
    <fullName>Extended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extended</label>
    <type>Checkbox</type>
</CustomField>