unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Groove_Channel_Crack__c.field-meta.xml
<CustomField>
    <fullName>Groove_Channel_Crack__c</fullName>
    <label>Groove/Channel Crack</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>