unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Hard_Bead__c.field-meta.xml
<CustomField>
    <fullName>Hard_Bead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hard Bead</label>
    <type>Checkbox</type>
</CustomField>