unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Inspection_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Card_Number__c</fullName>
    <formula>ETT_Inspection_Card__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Card Number</label>
    <type>Text</type>
</CustomField>