unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Nail_Punctures__c.field-meta.xml
<CustomField>
    <fullName>Nail_Punctures__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nail Punctures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>