unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Not_Repairable__c.field-meta.xml
<CustomField>
    <fullName>Not_Repairable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Repairable</label>
    <type>Checkbox</type>
</CustomField>