unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Spot__c.field-meta.xml
<CustomField>
    <fullName>Spot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spot</label>
    <type>Checkbox</type>
</CustomField>