unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Strain_Mark__c.field-meta.xml
<CustomField>
    <fullName>Strain_Mark__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strain Mark</label>
    <type>Checkbox</type>
</CustomField>