unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Thread_wornout__c.field-meta.xml
<CustomField>
    <fullName>Thread_wornout__c</fullName>
    <label>Thread wornout</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>