unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Turn_up_Chafour_Loose__c.field-meta.xml
<CustomField>
    <fullName>Turn_up_Chafour_Loose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turn up/Chafour Loose</label>
    <type>Checkbox</type>
</CustomField>