unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Tyre_Life__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Life__c</fullName>
    <formula>text(ETT_Inspection_Card__r.ETT_Tyre_Life__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre Life</label>
    <type>Text</type>
</CustomField>