unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Size__c</fullName>
    <formula>ETT_Inspection_Card__r.ETT_Tyre__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre Size</label>
    <type>Text</type>
</CustomField>