unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/fields/Uneven_Wear__c.field-meta.xml
<CustomField>
    <fullName>Uneven_Wear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uneven Wear</label>
    <type>Checkbox</type>
</CustomField>