unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/recordTypes/ETT_New_Tyre_and_Casing_Inspection_Procedures.recordType-meta.xml
<RecordType>
    <fullName>ETT_New_Tyre_and_Casing_Inspection_Procedures</fullName>
    <active>true</active>
    <label>New Tyre and Casing Inspection Procedures</label>
</RecordType>