unpackaged/main/default/objects/ETT_Tyre_Rejection_Line_Item__c/recordTypes/ETT_Retread_Tyre_Inspection_Procedures.recordType-meta.xml
<RecordType>
    <fullName>ETT_Retread_Tyre_Inspection_Procedures</fullName>
    <active>true</active>
    <label>Retread Tyre Inspection Procedures</label>
</RecordType>